<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.dahy.daily_budget_app.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/DefaultViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BaseTextStyle.Dark"
                android:text="@string/main_fragment_total_budget_label"
                android:textSize="24sp"/>


            <TextView
                style="@style/BaseTextStyle.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@{viewModel.totalBudget.toString()}'
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruble_sign"
                style="@style/BaseTextStyle.Dark"
                android:textSize="24sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/DefaultViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"

            android:paddingVertical="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/BaseTextStyle.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_budget_label"
                android:textSize="24sp" />

            <TextView
                style="@style/BaseTextStyle.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/base_today_sum"
                android:textSize="32sp" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/add_expense_button_content_description"
            android:src="@drawable/icon_fab"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>